src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-36.snap
---
source: src/lexer/lexer.rs
description: ">>"
---
[
    Token {
        kind: RightShift,
        value: None,
        start: 0,
        end: 2,
    },
]
