src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-42.snap
---
source: src/lexer/lexer.rs
description: //
---
[
    Token {
        kind: IntDiv,
        value: None,
        start: 0,
        end: 2,
    },
]
