src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-55.snap
---
source: src/lexer/lexer.rs
description: ">="
---
[
    Token {
        kind: GreaterEq,
        value: None,
        start: 0,
        end: 2,
    },
]
